# decision-tree-rules-extractor

./: Makefile  README.md  pyproject.toml  setup.cfg
decision_tree_rules_extractor/src/rule_processing/working/: rule_extractor.py  rule_parser.py
test/: Untitled.ipynb  cases.py  tree_extractor.ipynb  wittgenstein.ipynb
