[tool.poetry]
name = "decision_tree_rules_extractor"
version = "0.1.2"
description = "Method of generalizing rules from decision tree"
authors = ["Roman"]
license = "Apache License Version 2.0"
readme = "README.md"
packages = [{include = "decision_tree_rules_extractor"}]

[tool.poetry.dependencies]
python = "^3.11.3"
scikit-learn = "^1.3.0"
anytree = "^2.12.1"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
pytest = "^7.4.2"
jupyterlab = "^4.0.5"
pandas = "^2.1.0"
matplotlib = "^3.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
jupyter-lab = "jupyter-lab"
